--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="background-overlay"></div>
     <div class="container">
         <div class="header">
-            <h1>SRM intelli-Route</h1>
+            <h1>SRM intelli-Route test push</h1>
             <p class="subtitle">Your Smart Campus navigation assistant</p>
         </div>
 
